<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main.ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cityNameBaseline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="@id/cityNameBaseline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:text="@string/city_default_text" />

    <Button
        android:id="@+id/settingsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/settings_button_text" />

    <Button
        android:id="@+id/weatherButton"
        app:layout_constraintBottom_toTopOf="@id/settingsButton"
        app:layout_constraintEnd_toEndOf="@id/settingsButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/weather_button_text" />

    <Button
        android:id="@+id/windButton"
        app:layout_constraintBottom_toTopOf="@id/weatherButton"
        app:layout_constraintEnd_toEndOf="@id/weatherButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/wind_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>