<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.weather.ui.WeatherActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/weather_app_title"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Temperature -->
    <TextView
        android:id="@+id/temperatureLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/appBarWrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/temperature_label" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/temperatureLabelText"
        app:layout_constraintStart_toEndOf="@id/temperatureLabelText" />

    <!-- Min temperature -->
    <TextView
        android:id="@+id/minTemperatureLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/temperatureLabelText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/min_temperature_label" />

    <TextView
        android:id="@+id/minTemperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/minTemperatureLabelText"
        app:layout_constraintStart_toEndOf="@id/minTemperatureLabelText" />

    <!-- Max temperature -->
    <TextView
        android:id="@+id/maxTemperatureLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/minTemperatureLabelText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/max_temperature_label" />

    <TextView
        android:id="@+id/maxTemperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/maxTemperatureLabelText"
        app:layout_constraintStart_toEndOf="@id/maxTemperatureLabelText" />

    <!-- Humidity -->
    <TextView
        android:id="@+id/humidityLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/maxTemperatureLabelText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/humidity_label" />

    <TextView
        android:id="@+id/humidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/humidityLabelText"
        app:layout_constraintStart_toEndOf="@id/humidityLabelText" />

</androidx.constraintlayout.widget.ConstraintLayout>